welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: identifier expected but '=' found.
var vuBiscuit: = false;
               ^